--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^18.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
@@ -51,6 +51,7 @@
     "dist"
   ],
   "dependencies": {
+    "dompurify": "^3.0.9",
     "react-feather": "^2.0.10"
   },
   "publishConfig": {
