--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node": ">=10"
   },
   "scripts": {
-    "build": "microbundle-crl --no-compress --format modern,cjs",
+    "build": "microbundle-crl --no-compress --format umd --globals react=React,react-dom=ReactDOM,axios=axios,js-cookie=Cookies,react-feather=ReactFeather --define process.env.NODE_ENV=production",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
