--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ai-search-bar",
-  "version": "1.0.4-beta.13",
+  "version": "1.0.4-beta.14",
   "description": "Made with create-react-library",
   "author": "shauryabahuguna-tmpl",
   "license": "MIT",
@@ -12,7 +12,7 @@
     "node": ">=10"
   },
   "scripts": {
-    "build": "microbundle-crl --no-compress --format umd --globals react=React,react-dom=ReactDOM,axios=axios,js-cookie=Cookies,react-feather=ReactFeather --define process.env.NODE_ENV=production",
+    "build": "microbundle-crl --format umd --css inline --globals react=React,react-dom=ReactDOM,axios=axios,js-cookie=Cookies,react-feather=ReactFeather --define process.env.NODE_ENV=production",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
