--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "axios": "^1.6.7",
     "isomorphic-dompurify": "^2.4.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "react-feather": "^2.0.10"
   },
   "publishConfig": {
