--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "react-ai-search-bar",
-  "version": "1.0.5-beta.10.staging",
+  "version": "1.0.5-beta.11.staging",
   "description": "Made with create-react-library",
   "author": "shauryabahuguna-tmpl",
   "license": "MIT",
-  "repository": "shauryabahuguna-tmpl/react-ai-search-bar",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shauryabahuguna-tmpl/react-ai-search-bar.git"
+  },
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
+  "umd:main": "dist/init-umd.js",
   "source": "src/index.js",
   "engines": {
     "node": ">=10"
   },
   "scripts": {
-    "build": "microbundle-crl --format umd --css inline --globals react=React,react-dom=ReactDOM,axios=axios,js-cookie=Cookies,react-feather=ReactFeather --define process.env.NODE_ENV=production",
+    "build": "microbundle-crl --no-compress && microbundle-crl build src/init-umd.js --format=umd --name ReactAISearchBar --output dist/init-umd.js",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
@@ -22,9 +26,6 @@
     "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build"
-  },
-  "peerDependencies": {
-    "react": "^18.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
@@ -43,8 +44,6 @@
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1"
   },
   "files": [
@@ -54,7 +53,8 @@
     "axios": "^1.6.7",
     "isomorphic-dompurify": "^2.4.0",
     "js-cookie": "^3.0.5",
-    "react-feather": "^2.0.10"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "publishConfig": {
     "@shauryabahuguna-tmpl:registry": "https://npm.pkg.github.com"
