--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "webpack:build": "webpack --config webpack.config.js",
-    "build": "microbundle-crl --no-compress",
+    "build": "microbundle-crl --no-compress && webpack --config webpack.config.js",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
