--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ai-search-bar",
-  "version": "1.0.5-beta.13.staging",
+  "version": "1.0.5-beta.14.staging",
   "description": "Made with create-react-library",
   "author": "shauryabahuguna-tmpl",
   "license": "MIT",
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "webpack:build": "webpack --config webpack.config.js",
-    "build": "microbundle-crl --no-compress && webpack --config webpack.config.js",
+    "build": "microbundle-crl --format umd --css inline && webpack --config webpack.config.js",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
