--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ai-search-bar",
-  "version": "1.0.5-beta.15.staging",
+  "version": "1.0.5-beta.16.staging",
   "description": "Made with create-react-library",
   "author": "shauryabahuguna-tmpl",
   "license": "MIT",
@@ -49,6 +49,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^6.3.0",
     "microbundle-crl": "^0.13.10",
+    "mini-css-extract-plugin": "^2.9.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "react-scripts": "^5.0.1",
