--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "deploy": "gh-pages -d example/build"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.10",
+    "@babel/core": "^7.28.0",
+    "@babel/plugin-proposal-unicode-property-regex": "^7.18.6",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "babel-eslint": "^10.0.3",
@@ -48,7 +49,7 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^6.3.0",
-    "microbundle-crl": "^0.13.10",
+    "microbundle-crl": "^0.13.11",
     "mini-css-extract-plugin": "^2.9.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
