--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ai-search-bar",
-  "version": "1.0.6-JH-BOT-qa.1",
+  "version": "1.0.5-beta-JH-qa.27",
   "description": "Made with create-react-library",
   "author": "shauryabahuguna-tmpl",
   "license": "MIT",
